2008-05-30  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/extensions/constraintsdialog.ui: Disable unimplemented
	Save/Load buttons.

	* libavogadro/src/extensions/forcefieldextension.*: Only create new
	dialogs when needed. (in performAction, not in constructor)

	* libavogadro/src/extensions/constraintsdialog.cpp: Small GUI changes
	(min/max values, singleStep, ...)

	* libavogadro/src/extensions/propmodel.cpp: Angle and Torsion
	properties are not editable, don't set writable flag.

	* libavogadro/src/extensions/propextension.*: Only create dialogs
	(views) and models when needed. Call QObject::deleteLater() on both
	the model and the view in PropertiesView::hideEvent().

	* libavogadro/src/tools/autoopttool.*: Exit, wait, and delete the
	thread in the destructor. Display the energy while running. Added
	conjugate gradients again.

2008-05-28  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/insertfragmentdialog.cpp: workaround for bug
	#1977172. Create a new OBConversion object each time you insert a
	fragment from the library.

2008-05-28  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/directorytreemodel.*: Invalidate persistent
	indexes. See this blogpost for details: last code block at the bottom
	http://der-dakon.net/blog/KDE/persistent-crash.html (This fixes the
	crashes I was having with the "Reset List" button.

2008-05-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/glwidget.*: Add method to clear unit cell data.

	* libavogadro/src/extensions/unitcell*: Improved unit cell
	dialog. Added "Apply" button to change parameters. Automatically
	changes number of cells to display via signals/slots. Button to
	delete unit cells. New button to "fill" unit cells with
	symmetry-defined atoms via the space group.

2008-05-27  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/extensions/propmodel.cpp: Get energy for all